WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
115191
Media elements shouldn't resume playback when a page is restored from the back/forward cache if the WKView isn't in a window
https://bugs.webkit.org/show_bug.cgi?id=115191
Summary
Media elements shouldn't resume playback when a page is restored from the bac...
Jer Noble
Reported
2013-04-25 11:55:19 PDT
Media elements shouldn't resume playback when a page is restored from the back/forward cache if the WKView isn't in a window
Attachments
Patch
(4.39 KB, patch)
2013-04-25 11:59 PDT
,
Jer Noble
eric.carlson
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2013-04-25 11:55:46 PDT
<
rdar://problem/13727914
>
Jer Noble
Comment 2
2013-04-25 11:59:44 PDT
Created
attachment 199728
[details]
Patch
Jer Noble
Comment 3
2013-04-25 14:01:18 PDT
Committed
r149142
: <
http://trac.webkit.org/changeset/149142
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug